Fix for bug 85798 (INUSE_ATTRIBUTE_ERR expected when using setNamedItem()). r=sicking, sr=jst. Fix for bug 127205 (setNamedItemNS() in NamedNodeMap  doesn't set the item properly). r=sicking, sr=jst.